Fixed background gradient on mobile layout

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ main {
   flex-direction: column;
   min-width: 500px;
   width: calc(100vw - (100vh * 0.7625));
-  background-image: url('images/bg-pattern-desktop.svg');
+  background-image: url('images/bg-pattern-desktop.svg'), linear-gradient(135deg, hsl(0, 0%, 100%),hsl(0, 100%, 98%));
   background-size: max(calc(100vw - (100vh * 0.7625)), 500px) 100vh;
 }
 
@@ -140,24 +140,18 @@ html {
 
 
 body {
-  /* height: 100%; */
+  height: auto;
   width: 100vw;
-  /* background: linear-gradient(135deg, hsl(0, 0%, 100%),hsl(0, 100%, 98%)); */
-  /* background-size: 100%; */
+  background: linear-gradient(135deg, hsl(0, 0%, 100%),hsl(0, 100%, 98%));
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
 
-main {
-  /* width: 100%; */
-  /* height: 1000px; */
-}
 
 .left-main {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   background-image: none;
-  background: linear-gradient(135deg, hsl(0, 0%, 100%),hsl(0, 100%, 98%));
 }
 
 .header {
